--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     top: 15%;
 	background: linear-gradient(to right, red , yellow); /* Standard syntax */
     /*testing git!*/
+    /*testing again*/
 }
 
 h1 {
