--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 	background: linear-gradient(to right, red , yellow); /* Standard syntax */
     /*testing git!*/
     /*testing again*/
+    /*testing again*/
 }
 
 h1 {
